functionality and layout - fix spacing and add toggle functionality

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -566,6 +566,7 @@ display: none;
 
 .featured-items-heading{
   color: var(--HEADING-CLR);
+  margin-top: 5rem;
 }
 
 .fi-img{
@@ -609,7 +610,7 @@ display: none;
 
 .fi-toggle-section{
   display: none;
-  
+  margin-top: 4rem!important; 
 }
 
 
@@ -617,7 +618,11 @@ display: none;
   margin-top: 2rem;
   margin-bottom: 2rem;
   animation: visible 2s ease-in-out;
+  row-gap: 4rem;
+  transition: height 2s linear 1s;
+
 }
+
 
 @keyframes visible {
   0%{
@@ -626,6 +631,17 @@ display: none;
 
   100%{
     opacity: 1;
+  }
+}
+
+
+@keyframes unvisible {
+  0%{
+    height: 100%;
+  }
+
+  100%{
+    height: 0;
   }
 }
 
@@ -659,6 +675,7 @@ display: none;
 
 .bulk-contact-form--main-container{
   margin: 5rem 0;
+  padding: 0;
 }
 
 .bulk-contact-inner-container{
@@ -684,6 +701,11 @@ display: none;
 
 
 @media screen and (max-width: 768px){
+  .bulk-contact-inner-container{
+    background: none;
+  }
+
+
   .bulk-contact-inner-container > .row{
     flex-direction: column;
   }
@@ -704,8 +726,9 @@ display: none;
 
   .bulk-contact-form-container{
     width: inherit!important;
-    padding: 35px 5px!important;
+    padding: 35px 15px!important;
     margin: 1.4rem!important;
+    border: 1px solid var(--BORDER-LIGHT);
   }
 
 }
@@ -719,6 +742,7 @@ display: none;
   margin-left: 2rem;
   margin-bottom: 7rem;
 }
+
 
 .bulk-left-heading{
   font-weight: 700;
@@ -740,6 +764,13 @@ display: none;
   text-transform: uppercase;
   background-color: var(--DARK-COLOR)!important;
   border: 1px solid var(--DARK-COLOR)
+}
+
+
+@media screen and (max-width: 768px){
+  .text-btn-container{
+    color: var(--BLACK-CLR);
+  }
 }
 
 
@@ -777,6 +808,10 @@ display: none;
 
 /*  ||  TESTIMONIAL SECTION */
 
+.testimonial{
+  padding: 0;
+}
+
 
 .testimonial-heading{
   color: var(--HEADING-CLR);
@@ -802,9 +837,13 @@ display: none;
   } 
 
   .slick-next {
-    right: 11px;
+    right: 11px!important;
 }
 
+
+.test-dots{
+  display: none;
+}
 
 
 /* .slick-prev{
@@ -824,6 +863,33 @@ display: none;
     flex-direction: column;
   }
 
+  .slick-prev, .slick-next{
+    display: none!important;
+  }
+
+
+  .test-para{
+    font-size: 13px;
+  }
+
+  .right-test{
+    margin-top: 1rem;
+    width: 100%!important;
+  }
+
+  .test-dots{
+    display: block;
+    color: var(--DARK-COLOR);
+    text-decoration: underline;
+  }
+
+  .test-more {
+    display: none; /* Hidden by default */
+  }
+  
+  .test-more.visible {
+    display: inline; /* Show when the 'visible' class is added */
+  }
 
 }
 
@@ -838,7 +904,8 @@ display: none;
 /* ||  Contact Us Form */
 
 .contact-us-section{
-  margin-top: 6rem;
+  margin: 5rem auto;
+  padding: 0;
 }
 
 
@@ -852,7 +919,8 @@ display: none;
 }
 
 .contact-us-main--inner-container{
-  gap: 2rem;
+  column-gap: 2rem;
+  row-gap: 5rem;
 }
 
 
@@ -877,6 +945,7 @@ display: none;
 .left-add-info{
   border: 1px solid #13606633;
   border-radius: 40px;
+  row-gap: 2rem;
 }
 
 .right-contact-us{
@@ -905,14 +974,24 @@ display: none;
 
 
 
+/* Large screen  */
 
-
-@media screen and (min-width: 768px){
+@media screen and (min-width: 769px){
   
   .modal{
     --bs-modal-width: 700px!important;
     padding: 4rem;
   }
+
+}
+
+/* Small screen  */
+
+@media screen and (max-width: 768px) {
+  .pop-up-flex-container{
+    flex-direction: column;
+    align-items: center;
+  }  
 }
 
 
